# tsp

./: README.md  build.sh  make_zip.py  update.json
.github/workflows/: build.yml
.kiro/specs/tee-simulator-plus/: .config.kiro  .meta.json  design.md  requirements.md  tasks.md
module/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
module/config/: config.json
module/docs/: TIMING_SIDE_CHANNEL.md
module/native/jni/: Android.mk  Application.mk  CMakeLists.txt  equalizer.cpp  hook.cpp  main.cpp  zygisk_stubs.cpp
module/native/jni/include/: teesimplus.h  zygisk.hpp
module/scripts/: bridge.sh  config_manager.sh  equalizer_manager.sh  keybox_manager.sh  latency_profiler.sh  target_manager.sh
module/scripts/lib/: keybox_parser.sh  logger.sh
module/webroot/: app.js  index.html  style.css
patches/: apply_latency_patch.py
tests/: package.json  vitest.config.ts
tests/generators/: index.ts
tests/properties/: config-store.property.test.ts  equalizer-jitter.property.test.ts  equalizer.property.test.ts  keybox-parser-errors.property.test.ts  keybox-parser.property.test.ts  keybox-store.property.test.ts  profiler-judgment.property.test.ts  profiler-outlier.property.test.ts  shell-bridge.property.test.ts  target-list-roundtrip.property.test.ts  target-list.property.test.ts
tests/unit/: command-router.test.ts  config-manager.test.ts  log-rotation.test.ts
